--- a/Yeelight/res/values-fr/strings.xml
+++ b/Yeelight/res/values-fr/strings.xml
@@ -2,7 +2,7 @@
 <resources>
     <string name="about">A propos</string>
     <string name="action_settings">Réglages</string>
-    <string name="add_widget">Add widget</string>
+    <string name="add_widget">Ajouter un widget</string>
     <string name="alarm_disable">Désactivée</string>
     <string name="alarm_gradual">Graduel</string>
     <string name="alarm_progress">En cours de réglage...</string>
@@ -19,9 +19,9 @@
     <string name="alarm_repeat_everyday">Tous les jours</string>
     <string name="alarm_repeat_once">Une fois</string>
     <string name="alarm_set_time">Réglage de la minuterie</string>
-    <string name="alarm_switch_on">On</string>
-    <string name="alarm_switch_off">Off</string>
     <string name="alarm_switch">Alarme</string>
+    <string name="alarm_switch_off">Off</string>
+    <string name="alarm_switch_on">On</string>
     <string name="alert_dialog_cancel">Annuler</string>
     <string name="alert_dialog_fok">Ok</string>
     <string name="alert_dialog_text_entry">Renommer</string>
@@ -56,17 +56,17 @@
     <string name="fw_ota_introduce">Laissez la lampe connectée et allumée pendant la mise à jour. Elle redémarrera automatiquement.</string>
     <string name="fw_ota_progress">Mise à jour en cours...</string>
     <string name="fw_update">Mise à jour du firmware</string>
-    <string name="global_more">Plus</string>
     <string name="global_cancel">Annuler</string>
+    <string name="global_more">Plus</string>
     <string name="hello_world">Hello world!</string>
-    <string name="login">Compte Mi</string>
-    <string name="light_market">Market</string>
     <string name="light_alarm">Extinction de la lampe</string>
-    <string name="main_screen_title">Lampe Yeelight</string>
-    <string name="main_screen_switch">Comutateur</string>
+    <string name="light_market">Market</string>
+    <string name="login">Compte Mi</string>
     <string name="main_screen_color">Couleurs</string>
-    <string name="main_screen_sunshine">Soleil</string>
     <string name="main_screen_flow">Streamer</string>
+    <string name="main_screen_sunshine">Soleil</string>
+    <string name="main_screen_switch">Comutateur</string>
+    <string name="main_screen_title">Lampe Yeelight</string>
     <string name="mi_band">Mi Band</string>
     <string name="mi_band_bind_autoclose">Extinction automatique</string>
     <string name="mi_band_bind_bindtext">Mi Band connecté</string>
@@ -81,7 +81,7 @@
     <string name="mi_band_nodevice_btn_text">Rechercher</string>
     <string name="mi_band_nodevice_sub_text">Assurez vous que le téléphone soit proximité du Mi Band</string>
     <string name="mi_band_nodevice_title">Pas de Mi Band trouvé</string>
-    <string name="mi_band_open_broadcast">Confirmer la connection du Mi Band</string>
+    <string name="mi_band_open_broadcast">"Confirmer l'appairage du Mi Band"</string>
     <string name="mi_band_search_sub_text">Assurez vous que le téléphone soit proximité du Mi Band</string>
     <string name="mi_band_search_title">Recherche du Mi Band</string>
     <string name="mi_band_single_btn_text_bind">Ok</string>
@@ -93,7 +93,7 @@ pendant votre sommeil</string>
     <string name="my_lamp">Renommer la lampe</string>
     <string name="name_light_title">Nom de votre Yeelight</string>
     <string name="night_light_disable">Désactivé</string>
-    <string name="night_light_sub_info">\"Lorsque la veilleuse est activée, vous pouvez toucher le dessus de la lampe pour régler la luminosité</string>
+    <string name="night_light_sub_info">Lorsque la veilleuse est activée, vous pouvez toucher le dessus de la lampe pour régler la luminosité</string>
     <string name="night_light_text">Veilleuse</string>
     <string name="night_light_text_off">Veilleuse éteinte</string>
     <string name="night_light_text_on">Veilleuse allumée</string>
@@ -126,7 +126,7 @@ pendant votre sommeil</string>
     <string name="setting_rebind_title">est déconnecté</string>
     <string name="setting_rebind_title_info">Connectez votre téléphone en bluetooth pour controler votre Yeelight</string>
     <string name="setting_rebind_title_info_no_connect">Reconnecter votre téléphone avec votre Yeelight pour la controler</string>
-    <string name="setting_rebind_title_info_recovery">"Une fois la réinitialisation effectuée, reconnectez votre Yeelight pour la gérer avec votre téléphone"</string>
+    <string name="setting_rebind_title_info_recovery">Une fois la réinitialisation effectuée, reconnectez votre Yeelight pour la gérer avec votre téléphone</string>
     <string name="setting_rebind_title_no_connect">Bluetooth déconnecté</string>
     <string name="setting_rebind_title_recovery">Réinitialisation effectuée</string>
     <string name="setting_unbind_btn_text">Déconnecter</string>
@@ -134,10 +134,10 @@ pendant votre sommeil</string>
     <string name="setting_unbind_text_2">En vous déconnectant, vous pourrez utiliser un autre téléphone pour controler votre Yeelight.</string>
     <string name="smart_device">Appairer des appareils</string>
     <string name="smart_scene">Réglages intelligents</string>
-    <string name="sync_light">Synchronisation</string>
     <string name="sw_check">Rechercher des mise à jour</string>
+    <string name="sync_light">Synchronisation</string>
     <string name="unable_bind">Appairage échoué</string>
-    <string name="unable_bind_text">Assurez vous que le téléphone soit  proximité, appuyez sur le bouton de liaison,et que la lampe soit allimentée</string>
+    <string name="unable_bind_text">Assurez vous que le téléphone soit proximité, appuyez sur le bouton de liaison,et que la lampe soit allimentée</string>
     <string name="unbind">Désappairer</string>
     <string name="version">Nouvel version</string>
     <string name="wake_up_setting_off">Désactivé</string>
