--- a/Yeelight/res/values-fr/strings.xml
+++ b/Yeelight/res/values-fr/strings.xml
@@ -3,7 +3,9 @@
     <string name="about">A propos</string>
     <string name="action_settings">Réglages</string>
     <string name="add_widget">Ajouter un widget</string>
+    <string name="alarm_def_1_min">1 minute</string>
     <string name="alarm_disable">Désactivée</string>
+    <string name="alarm_disable_off">Eteint</string>
     <string name="alarm_gradual">Graduel</string>
     <string name="alarm_progress">En cours de réglage...</string>
     <string name="alarm_repeat">Répétition</string>
@@ -18,6 +20,8 @@
     <string name="alarm_repeat_custom">Personnaliser</string>
     <string name="alarm_repeat_everyday">Tous les jours</string>
     <string name="alarm_repeat_once">Une fois</string>
+    <string name="alarm_repeat_weekday">Jour de la semaine</string>
+    <string name="alarm_repeat_weekend">Weekend</string>
     <string name="alarm_set_time">Réglage de la minuterie</string>
     <string name="alarm_switch">Alarme</string>
     <string name="alarm_switch_off">Off</string>
@@ -26,13 +30,36 @@
     <string name="alert_dialog_fok">Ok</string>
     <string name="alert_dialog_text_entry">Renommer</string>
     <string name="all_light">Toutes les lampes</string>
+    <string name="already_last_version">"L'application est à jour."</string>
     <string name="app_name">Yeelight</string>
+    <string name="auth_sub_text">"Appuyez sur le bouton Scène pour terminer l'appairage".</string>
+    <string name="auth_title">Lampe trouvée</string>
+    <string name="checking">Vérification…</string>
+    <string name="color_flow_add">Ajouter</string>
+    <string name="color_flow_camera">Caméra</string>
+    <string name="color_flow_delete">Suppirmer</string>
+    <string name="color_flow_picture">Photos</string>
+    <string name="color_flow_select_color">Couleurs</string>
+    <string name="color_flow_select_photo">Sélecteur de couleur</string>
+    <string name="color_flow_settings">Réglages</string>
+    <string name="common_dialog_input_empty">"Vous ne pouvez pas laisser ce champ vide!"</string>
+    <string name="common_dialog_input_rename">Nom</string>
+    <string name="common_dialog_input_save">Sauvegarder</string>
+    <string name="common_dialog_input_too_long">Trop long!</string>
+    <string name="common_discard_changes">Annuler les changements?</string>
+    <string name="common_discard_confirm">Annuler</string>
+    <string name="common_set_complete">Terminé</string>
     <string name="configure">Configurer</string>
+    <string name="confirm_disconnect">Déconnecter le bluetooth ?</string>
+    <string name="confirm_disconnect_btn_ok">Déconnecté</string>
     <string name="connection">Connection</string>
+    <string name="default_device_name">Yeelight</string>
     <string name="delay_light">"Délai d'extinction"</string>
+    <string name="delay_light_introduce">"Appuyez longuement sur le bouton d'alimentation jusqu'à ce que la lampe clignote pour activer la minuterie de sommeil"</string>
+    <string name="delay_light_off">Eteint</string>
     <string name="delay_light_time">%1$d minutes</string>
-    <string name="delay_light_time_detail">"Extinction automatique
-    au bout de %1$d"</string>
+    <string name="delay_light_time_detail">"Extinction automatique au bout de %1$d"</string>
+    <string name="delay_light_time_text">Timer</string>
     <string name="device">Appareil</string>
     <string name="device_unbind">Déconnecter</string>
     <string name="device_xiaomi">Mi Band</string>
@@ -43,51 +70,93 @@
     <string name="discover_device">Recherche de votre Yeelight</string>
     <string name="feedback">Commentaires</string>
     <string name="feedback_commit">Envoyer</string>
+    <string name="feedback_commit_success">Votre commentaire est envoyé</string>
     <string name="feedback_contact_hint">Contact</string>
     <string name="feedback_info_hint">Commentaires</string>
     <string name="feedback_network_err">Réseau indisponible，vérifiez vos réglages réseaux</string>
+    <string name="feedback_say_something" />
     <string name="feedback_send">Envoyer</string>
+    <string name="feedback_sending">Envoie...</string>
+    <string name="feedback_server_error">Le serveur est occupé, réessayer</string>
     <string name="fw_info">Version du firmware</string>
     <string name="fw_new_version">Dernière version du firmware : %1$s</string>
     <string name="fw_ota_back_to_main">Retour</string>
     <string name="fw_ota_btn_nexttime">Prochaine mise à jour</string>
+    <string name="fw_ota_btn_start_now">Mettre à jour</string>
     <string name="fw_ota_btn_tryagain">Réessayer</string>
+    <string name="fw_ota_confirm_failure">Le serveur est occupé, réessayer</string>
     <string name="fw_ota_failure">Mise à jour échouée</string>
     <string name="fw_ota_introduce">Laissez la lampe connectée et allumée pendant la mise à jour. Elle redémarrera automatiquement.</string>
+    <string name="fw_ota_introduce_failed" />
     <string name="fw_ota_progress">Mise à jour en cours...</string>
+    <string name="fw_release_note">Note de version</string>
     <string name="fw_update">Mise à jour du firmware</string>
+    <string name="fw_upgrade_release_note">"1.Night Mode improved
+2.Bug fixed
+3.Performance improved"</string>
     <string name="global_cancel">Annuler</string>
     <string name="global_more">Plus</string>
+    <string name="guide_other_mode">"Essayez d'autres modes
+  utilisant les mêmes gestes"</string>
+    <string name="guide_right_left">"Glissez vers la gauche ou la droite
+  pour changer les couleurs"</string>
+    <string name="guide_up_down">"Glissez vers le haut ou vers le bas
+  pour contrôler la luminosité"</string>
     <string name="hello_world">Hello world!</string>
+    <string name="help_bt_open">Allumer le bluetooth</string>
+    <string name="help_disconnect">Déconnecter les autres téléphones</string>
+    <string name="help_distance">Vérifiez que la lampe est côté du téléphone</string>
+    <string name="help_fw_version">Version du Firmware:</string>
+    <string name="help_plugin">Rebrancher la prise</string>
+    <string name="help_sw_version">Version logiciel:</string>
     <string name="light_alarm">Extinction de la lampe</string>
     <string name="light_market">Market</string>
     <string name="login">Compte Mi</string>
+    <string name="login_agreement1">En vous connectant, vous acceptez nos</string>
+    <string name="login_agreement2">"conditions d'utilisation"</string>
+    <string name="login_inprogress">Connection…</string>
+    <string name="login_jump">Passer</string>
+    <string name="logout">Déconnecter</string>
+    <string name="logout_confirm">Déconnecter ?</string>
     <string name="main_screen_color">Couleurs</string>
     <string name="main_screen_flow">Streamer</string>
-    <string name="main_screen_sunshine">Soleil</string>
-    <string name="main_screen_switch">Comutateur</string>
+    <string name="main_screen_sunshine">Lumière</string>
+    <string name="main_screen_switch">Power</string>
+    <string name="main_screen_switch_off">Power</string>
+    <string name="main_screen_switch_on">Power</string>
     <string name="main_screen_title">Lampe Yeelight</string>
     <string name="mi_band">Mi Band</string>
+    <string name="mi_band_add_failed">Apprage échoué!</string>
     <string name="mi_band_bind_autoclose">Extinction automatique</string>
     <string name="mi_band_bind_bindtext">Mi Band connecté</string>
+    <string name="mi_band_bind_connect_failed_retry">Connection échouée! réessayer</string>
     <string name="mi_band_bind_control_set">Réglages</string>
+    <string name="mi_band_bind_failed">Connection échouée!</string>
+    <string name="mi_band_bind_shake">Le Mi Band vibre?</string>
     <string name="mi_band_bind_sub_text_bind">Arrêt automatique lors du sommeil</string>
     <string name="mi_band_bind_sub_text_unbind">Connectez votre Mi Band pour éteindre la lampe automatique lors du sommeil</string>
     <string name="mi_band_bind_title_bind">Connection au Mi Band réussi</string>
-    <string name="mi_band_bind_unbind">Déconnecter</string>
+    <string name="mi_band_bind_unbind">Déconnecté</string>
+    <string name="mi_band_bind_unbind_confirm_btn">Déconnecté</string>
     <string name="mi_band_bind_unbind_sub">"L'extinction automatique ne fonctionne que si votre Mi Band est connecté"</string>
-    <string name="mi_band_bind_unbind_title">Mi Band non connecté</string>
-    <string name="mi_band_bind_unbindtext">Mi Band non connecté</string>
+    <string name="mi_band_bind_unbind_title">Mi Band</string>
+    <string name="mi_band_bind_unbindtext">Déconnecté le Mi Band</string>
+    <string name="mi_band_check_mi_health_exist">"Vérifiez la version de l'app Mi Fit"</string>
+    <string name="mi_band_common_sub_title">Extinction automatique lors du sommeil</string>
+    <string name="mi_band_common_title">小米手环控制</string>
+    <string name="mi_band_confirm_upgrade">Mise à jour du firmware</string>
+    <string name="mi_band_connecting">Connection…</string>
+    <string name="mi_band_low_version_notice">Mettez à jour le firmware du Mi Band pour utiliser ces fonctions</string>
     <string name="mi_band_nodevice_btn_text">Rechercher</string>
     <string name="mi_band_nodevice_sub_text">Assurez vous que le téléphone soit proximité du Mi Band</string>
     <string name="mi_band_nodevice_title">Pas de Mi Band trouvé</string>
     <string name="mi_band_open_broadcast">"Confirmer l'appairage du Mi Band"</string>
+    <string name="mi_band_reopen_broadcast">"Nécessite Mi Band BLE Broadcast. Appuyez sur \"Ok\" pour l'activer"</string>
     <string name="mi_band_search_sub_text">Assurez vous que le téléphone soit proximité du Mi Band</string>
     <string name="mi_band_search_title">Recherche du Mi Band</string>
     <string name="mi_band_single_btn_text_bind">Ok</string>
     <string name="mi_band_single_btn_text_quick">Appairage rapide</string>
-    <string name="mi_band_single_sub_text">Votre Mi Band éteindra votre Yeelight
-pendant votre sommeil</string>
+    <string name="mi_band_single_sub_text">Votre Mi Band éteindra votre Yeelight pendant votre sommeil</string>
     <string name="mi_band_single_title">Mi Band trouvé</string>
     <string name="my_account">Mon compte</string>
     <string name="my_lamp">Renommer la lampe</string>
@@ -137,6 +206,7 @@ pendant votre sommeil</string>
     <string name="sw_check">Rechercher des mise à jour</string>
     <string name="sync_light">Synchronisation</string>
     <string name="unable_bind">Appairage échoué</string>
+    <string name="unable_bind_rebind">Appairer une lampe</string>
     <string name="unable_bind_text">Assurez vous que le téléphone soit proximité, appuyez sur le bouton de liaison,et que la lampe soit allimentée</string>
     <string name="unbind">Désappairer</string>
     <string name="version">Nouvel version</string>
