--- a/Yeelight/res/values-fr/strings.xml
+++ b/Yeelight/res/values-fr/strings.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <string name="about">A propos</string>
+    <string name="about">À propos</string>
     <string name="action_settings">Réglages</string>
+    <string name="add_new_device">Ajouter une nouvelle lampe Yeelight</string>
     <string name="add_widget">Ajouter un widget</string>
     <string name="alarm_def_1_min">1 minute</string>
     <string name="alarm_disable">Désactivée</string>
@@ -32,7 +33,7 @@
     <string name="all_light">Toutes les lampes</string>
     <string name="already_last_version">"L'application est à jour."</string>
     <string name="app_name">Yeelight</string>
-    <string name="auth_sub_text">"Appuyez sur le bouton Scène pour terminer l'appairage".</string>
+    <string name="auth_sub_text">"Appuyez sur le bouton Scène pour terminer l’appairage".</string>
     <string name="auth_title">Lampe trouvée</string>
     <string name="checking">Vérification…</string>
     <string name="color_flow_add">Ajouter</string>
@@ -46,7 +47,7 @@
     <string name="common_dialog_input_rename">Nom</string>
     <string name="common_dialog_input_save">Sauvegarder</string>
     <string name="common_dialog_input_too_long">Trop long!</string>
-    <string name="common_discard_changes">Annuler les changements?</string>
+    <string name="common_discard_changes">Annuler les changements ?</string>
     <string name="common_discard_confirm">Annuler</string>
     <string name="common_set_complete">Terminé</string>
     <string name="configure">Configurer</string>
@@ -55,16 +56,18 @@
     <string name="connection">Connection</string>
     <string name="default_device_name">Yeelight</string>
     <string name="delay_light">"Délai d'extinction"</string>
-    <string name="delay_light_introduce">"Appuyez longuement sur le bouton d'alimentation jusqu'à ce que la lampe clignote pour activer la minuterie de sommeil"</string>
+    <string name="delay_light_introduce">"Appuyez longuement sur le bouton d’alimentation jusqu’à ce que la lampe clignote pour activer la minuterie de sommeil"</string>
     <string name="delay_light_off">Eteint</string>
     <string name="delay_light_time">%1$d minutes</string>
     <string name="delay_light_time_detail">"Extinction automatique au bout de %1$d"</string>
-    <string name="delay_light_time_text">Timer</string>
+    <string name="delay_light_time_text">Minuteur</string>
+	<string name="delete_device_item">Supprimer</string>
     <string name="device">Appareil</string>
+ 	<string name="device_list">Mes Lampes</string>
     <string name="device_unbind">Déconnecter</string>
-    <string name="device_xiaomi">Mi Band</string>
+    <string name="device_xiaomi">Mi Bracelet</string>
     <string name="dialog_cancel">Annuler</string>
-    <string name="dialog_input_hint">Entre 7 et 21 caractères</string>
+    <string name="dialog_input_hint">Entrez entre 7 et 21 caractères</string>
     <string name="dialog_ok">Ok</string>
     <string name="disconnect_bt">Connection bluetooth</string>
     <string name="discover_device">Recherche de votre Yeelight</string>
@@ -78,8 +81,8 @@
     <string name="feedback_send">Envoyer</string>
     <string name="feedback_sending">Envoie...</string>
     <string name="feedback_server_error">Le serveur est occupé, réessayer</string>
-    <string name="fw_info">Version du firmware</string>
-    <string name="fw_new_version">Dernière version du firmware : %1$s</string>
+    <string name="fw_info">Version du programme</string>
+    <string name="fw_new_version">Dernière version du programme : %1$s</string>
     <string name="fw_ota_back_to_main">Retour</string>
     <string name="fw_ota_btn_nexttime">Prochaine mise à jour</string>
     <string name="fw_ota_btn_start_now">Mettre à jour</string>
@@ -90,13 +93,13 @@
     <string name="fw_ota_introduce_failed" />
     <string name="fw_ota_progress">Mise à jour en cours...</string>
     <string name="fw_release_note">Note de version</string>
-    <string name="fw_update">Mise à jour du firmware</string>
-    <string name="fw_upgrade_release_note">"1.Night Mode improved
-2.Bug fixed
-3.Performance improved"</string>
+    <string name="fw_update">Mise à jour du programme</string>
+    <string name="fw_upgrade_release_note">"1.Mode Nuit améliorée
+2.Correction de bug
+3.Performance améliorée"</string>
     <string name="global_cancel">Annuler</string>
     <string name="global_more">Plus</string>
-    <string name="guide_other_mode">"Essayez d'autres modes
+    <string name="guide_other_mode">"Essayez d’autres modes
   utilisant les mêmes gestes"</string>
     <string name="guide_right_left">"Glissez vers la gauche ou la droite
   pour changer les couleurs"</string>
@@ -106,14 +109,14 @@
     <string name="help_bt_open">Allumer le bluetooth</string>
     <string name="help_disconnect">Déconnecter les autres téléphones</string>
     <string name="help_distance">Vérifiez que la lampe est côté du téléphone</string>
-    <string name="help_fw_version">Version du Firmware:</string>
+    <string name="help_fw_version">Version du programme:</string>
     <string name="help_plugin">Rebrancher la prise</string>
     <string name="help_sw_version">Version logiciel:</string>
     <string name="light_alarm">Extinction de la lampe</string>
     <string name="light_market">Market</string>
     <string name="login">Compte Mi</string>
     <string name="login_agreement1">En vous connectant, vous acceptez nos</string>
-    <string name="login_agreement2">"conditions d'utilisation"</string>
+    <string name="login_agreement2">"conditions d’utilisation"</string>
     <string name="login_inprogress">Connection…</string>
     <string name="login_jump">Passer</string>
     <string name="logout">Déconnecter</string>
@@ -125,39 +128,39 @@
     <string name="main_screen_switch_off">Power</string>
     <string name="main_screen_switch_on">Power</string>
     <string name="main_screen_title">Lampe Yeelight</string>
-    <string name="mi_band">Mi Band</string>
-    <string name="mi_band_add_failed">Apprage échoué!</string>
+    <string name="mi_band">Mi Bracelet</string>
+    <string name="mi_band_add_failed">Appairage échoué !</string>
     <string name="mi_band_bind_autoclose">Extinction automatique</string>
-    <string name="mi_band_bind_bindtext">Mi Band connecté</string>
+    <string name="mi_band_bind_bindtext">Mi Bracelet connecté</string>
     <string name="mi_band_bind_connect_failed_retry">Connection échouée! réessayer</string>
     <string name="mi_band_bind_control_set">Réglages</string>
     <string name="mi_band_bind_failed">Connection échouée!</string>
-    <string name="mi_band_bind_shake">Le Mi Band vibre?</string>
+    <string name="mi_band_bind_shake">Le Mi Bracelet vibre?</string>
     <string name="mi_band_bind_sub_text_bind">Arrêt automatique lors du sommeil</string>
-    <string name="mi_band_bind_sub_text_unbind">Connectez votre Mi Band pour éteindre la lampe automatique lors du sommeil</string>
-    <string name="mi_band_bind_title_bind">Connection au Mi Band réussi</string>
+    <string name="mi_band_bind_sub_text_unbind">Connectez votre Mi Bracelet pour éteindre la lampe automatique lors du sommeil</string>
+    <string name="mi_band_bind_title_bind">Connection au Mi Bracelet réussi</string>
     <string name="mi_band_bind_unbind">Déconnecté</string>
     <string name="mi_band_bind_unbind_confirm_btn">Déconnecté</string>
-    <string name="mi_band_bind_unbind_sub">"L'extinction automatique ne fonctionne que si votre Mi Band est connecté"</string>
-    <string name="mi_band_bind_unbind_title">Mi Band</string>
-    <string name="mi_band_bind_unbindtext">Déconnecté le Mi Band</string>
+    <string name="mi_band_bind_unbind_sub">"L'extinction automatique ne fonctionne que si votre Mi Bracelet est connecté"</string>
+    <string name="mi_band_bind_unbind_title">Mi Bracelet</string>
+    <string name="mi_band_bind_unbindtext">Déconnecté le Mi Bracelet</string>
     <string name="mi_band_check_mi_health_exist">"Vérifiez la version de l'app Mi Fit"</string>
     <string name="mi_band_common_sub_title">Extinction automatique lors du sommeil</string>
-    <string name="mi_band_common_title">小米手环控制</string>
-    <string name="mi_band_confirm_upgrade">Mise à jour du firmware</string>
+    <string name="mi_band_common_title">Contrôle du Mi Bracelet</string>
+    <string name="mi_band_confirm_upgrade">Mise à jour du programme</string>
     <string name="mi_band_connecting">Connection…</string>
-    <string name="mi_band_low_version_notice">Mettez à jour le firmware du Mi Band pour utiliser ces fonctions</string>
+    <string name="mi_band_low_version_notice">Mettez à jour le programme du Mi Bracelet pour utiliser ces fonctions</string>
     <string name="mi_band_nodevice_btn_text">Rechercher</string>
-    <string name="mi_band_nodevice_sub_text">Assurez vous que le téléphone soit proximité du Mi Band</string>
-    <string name="mi_band_nodevice_title">Pas de Mi Band trouvé</string>
-    <string name="mi_band_open_broadcast">"Confirmer l'appairage du Mi Band"</string>
-    <string name="mi_band_reopen_broadcast">"Nécessite Mi Band BLE Broadcast. Appuyez sur \"Ok\" pour l'activer"</string>
-    <string name="mi_band_search_sub_text">Assurez vous que le téléphone soit proximité du Mi Band</string>
-    <string name="mi_band_search_title">Recherche du Mi Band</string>
+    <string name="mi_band_nodevice_sub_text">Assurez vous que le téléphone soit proximité du Mi Bracelet</string>
+    <string name="mi_band_nodevice_title">Pas de Mi Bracelet trouvé</string>
+    <string name="mi_band_open_broadcast">"Confirmer l'appairage du Mi Bracelet"</string>
+    <string name="mi_band_reopen_broadcast">"Nécessite Mi Bracelet BLE Broadcast. Appuyez sur \"Ok\" pour l'activer"</string>
+    <string name="mi_band_search_sub_text">Assurez vous que le téléphone soit proximité du Mi Bracelet</string>
+    <string name="mi_band_search_title">Recherche du Mi Bracelet</string>
     <string name="mi_band_single_btn_text_bind">Ok</string>
     <string name="mi_band_single_btn_text_quick">Appairage rapide</string>
-    <string name="mi_band_single_sub_text">Votre Mi Band éteindra votre Yeelight pendant votre sommeil</string>
-    <string name="mi_band_single_title">Mi Band trouvé</string>
+    <string name="mi_band_single_sub_text">Votre Mi Bracelet éteindra votre Yeelight pendant votre sommeil</string>
+    <string name="mi_band_single_title">Mi Bracelet trouvé</string>
     <string name="my_account">Mon compte</string>
     <string name="my_lamp">Renommer la lampe</string>
     <string name="name_light_title">Nom de votre Yeelight</string>
@@ -178,11 +181,14 @@
     <string name="picker_month">mois</string>
     <string name="picker_year">année</string>
     <string name="pinfo">Vos informations</string>
+	<string name="pull_to_scan">Tirer pour scanner</string>
     <string name="recovery">"Restaurer les réglages d'usine"</string>
     <string name="recovery_btn_text">Réinitialiser</string>
     <string name="recovery_info">La réinitialisation efface tous vos réglages (nom, couleur...).</string>
     <string name="register">Créer un compte Mi</string>
-    <string name="reset">Reset</string>
+	<string name="release_to_scan">Relâchez pour scanner</string>
+    <string name="reset">Réinitialiser</string>
+	<string name="scanning">Scan en cours...</string>
     <string name="screen_all_light_offline">Pas de lampe trouvée, essayez ceci :</string>
     <string name="service">Service</string>
     <string name="service_time_hour">Utilisation totale %1$d</string>
@@ -193,22 +199,26 @@
     <string name="setting_rebind_btn_text_no_connect">Reconnecter</string>
     <string name="setting_rebind_btn_text_recovery">connection de votre Yeelight en cours</string>
     <string name="setting_rebind_title">est déconnecté</string>
-    <string name="setting_rebind_title_info">Connectez votre téléphone en bluetooth pour controler votre Yeelight</string>
-    <string name="setting_rebind_title_info_no_connect">Reconnecter votre téléphone avec votre Yeelight pour la controler</string>
-    <string name="setting_rebind_title_info_recovery">Une fois la réinitialisation effectuée, reconnectez votre Yeelight pour la gérer avec votre téléphone</string>
+    <string name="setting_rebind_title_info">Connectez votre téléphone en Bluetooth pour contrôler votre Yeelight</string>
+	<string name="setting_rebind_title_info_no_connect" />
+    <string name="setting_rebind_title_info_recovery" />
     <string name="setting_rebind_title_no_connect">Bluetooth déconnecté</string>
     <string name="setting_rebind_title_recovery">Réinitialisation effectuée</string>
     <string name="setting_unbind_btn_text">Déconnecter</string>
-    <string name="setting_unbind_text_1">En déconnectant votre appareil, vous ne pourrez pas controler votre Yeelight.</string>
-    <string name="setting_unbind_text_2">En vous déconnectant, vous pourrez utiliser un autre téléphone pour controler votre Yeelight.</string>
+    <string name="setting_unbind_text_1">En déconnectant votre appareil, vous ne pourrez pas contrôler votre Yeelight.</string>
+    <string name="setting_unbind_text_2">En vous déconnectant, vous pourrez utiliser un autre téléphone pour contrôler votre Yeelight.</string>
     <string name="smart_device">Appairer des appareils</string>
     <string name="smart_scene">Réglages intelligents</string>
     <string name="sw_check">Rechercher des mise à jour</string>
     <string name="sync_light">Synchronisation</string>
+    <string name="toast_device_disconnected">\"%1$s\" a été débranché</string>
+    <string name="toast_device_unbind">\"%1$s\" a été dissocié</string>
+    <string name="toast_factory_reset">\"%1$s\" a été réinitialisé aux paramètres d’usine</string>
+    <string name="toast_no_device_connected">Aucune lampe trouvé</string>
     <string name="unable_bind">Appairage échoué</string>
     <string name="unable_bind_rebind">Appairer une lampe</string>
     <string name="unable_bind_text">Assurez vous que le téléphone soit proximité, appuyez sur le bouton de liaison,et que la lampe soit allimentée</string>
-    <string name="unbind">Désappairer</string>
+    <string name="unbind">Désapparier</string>
     <string name="version">Nouvel version</string>
     <string name="wake_up_setting_off">Désactivé</string>
     <string name="wake_up_setting_on">Activé</string>
@@ -218,4 +228,10 @@
     <string name="wake_up_turn_off">Désactivé</string>
     <string name="wake_up_turn_on">Activé</string>
     <string name="welcome">Yeelight</string>
+    <string name="xlistview_footer_hint_normal">Afficher davantage</string>
+    <string name="xlistview_footer_hint_ready">Desserrer la charge plus</string>
+    <string name="xlistview_header_hint_loading">Chargement...</string>
+    <string name="xlistview_header_hint_normal">rafraîchir en déroulante</string>
+    <string name="xlistview_header_hint_ready">Actualisation des données</string>
+    <string name="xlistview_header_last_time">Dernière mise à jour ：</string>
 </resources>
